fixes spacing on history card

--- a/app/assets/app.css
+++ b/app/assets/app.css
@@ -216,6 +216,6 @@ md-list:nth-child(2) {
 .value-input {
   text-align: right;
 }
-form md-input-container {
+.user-form md-input-container {
   min-width: 300px;
 }
